public/stylesheets/master.css
/* ... */
div#editorToolboxTop div#basicBricks {
	float: left;
	background: url(../images/editor-basicbricks.png) no-repeat;
}

div#editorToolboxTop div#specialBricks {
	float: right;
	background: url(../images/editor-specialbricks.png) no-repeat;
}

div#editorToolboxBottom {
	position: absolute;
	width: 86px;
	left: 886px;
	top: 618px;
	z-index: 8;
}

a#runButton, a#showButton {
	width: 54px;
	background: url(../images/editor-button-run.png) no-repeat;
}

a#clearButton {
	float: right;
	width: 65px;
	background: url(../images/editor-button-clear.png) no-repeat;
}

a#nextButton, a#overviewNextButton {
	float:right;
	width: 65px;
	background: url(../images/editor-button-next.png) no-repeat;
}

a#previousButton, a#overviewPreviousButton {
	float: right;
	width: 65px;
	background: url(../images/editor-button-previous.png) no-repeat;
}

a#helpButton {
	float: right;
	width: 31px;
	background: url(../images/editor-button-help.png) no-repeat;
}

a#galleryButton {
	float: right;
	width: 89px;
	background: url(../images/editor-button-back.png) no-repeat;
}

a#newTrackButton {
	float: right;
	width: 96px;
	background: url(../images/editor-button-new.png) no-repeat;
}

a#showroomLikeButton {
	width: 55px;
	background: url(../images/editor-button-like.png) no-repeat;
}

a#autoButton {
	width: 65px;
	background: url(../images/editor-button-auto.png) no-repeat;
}

a#newTrackButton, a#galleryButton {
	margin-top: 1px;
}

a#facebookButton, a#showroomFacebookButton {
	width: 31px;
	float: right;
	background: url(../images/editor-button-facebook.png) no-repeat;
}

a#twitterButton, a#showroomTwitterButton {
	width: 31px;
	float: right;
	background: url(../images/editor-button-twitter.png) no-repeat;
}

a#showroomFacebookButton, a#showroomTwitterButton, a#shorwoomLikeButton, 
a#overviewNextButton, a#overviewPreviousButton {
	float: left; 
}

a#runButton:active, a#clearButton:active, 
a#facebookButton:active, a#twitterButton:active,
a#nextButton:active, a#previousButton:active, a#showButton:active,
a#showroomFacebookButton:active, a#showroomTwitterButton:active, a#showroomLikeButton:active,
a#overviewNextButton:active, a#overviewPreviousButton:active {
	background-position: 0 -30px;
}

a#overviewNextButton.inactive, a#overviewPreviousButton.inactive {
	cursor: auto;
	background-position: 0 -60px;
}

a#overviewNextButton.inactive:active, a#overviewPreviousButton.inactive:active {
	background-position: 0 -60px;
}

a#publishButton {
	width: 65px;
	height: 30px;
	float: right;
	display: block;
	text-indent: -1000px;
	margin-top: 10px;
}

a#repeatButton.active, a#helpButton.active, a#autoButton.active {
	background-position: 0 -30px;
}

a#showroomFlagButton {
	color: #800000;
	cursor: pointer;
}

div.showroomFlag {
	clear: both;
	margin: 20px 0 0 4px;
	padding-top: 20px;
	line-height: 14px;
}

a.publishButton {background: url(../images/editor-button-publish.png) no-repeat;}

a.activePublish {
	background-position: 0 -30px;
	cursor: pointer;
}

a.activePublish:active, a.activeNextOverView {background-position: 0 -60px;}

a.editorButton {
	cursor: pointer;
	text-indent: -1000px;
	display: block;
	height: 30px;
	float: left;
	margin-right: 5px;
	overflow: hidden;
  z-index: 4;
}

.testButton {
	color: black;
	cursor: pointer;
}

#staticCanvas {
  position: absolute;
  z-index: 1;
}

#dynamicCanvas {
 position: absolute;
 z-index: 2;
}

#overviewControls {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 9px;
	position: absolute;
	left: 338px;
	top: 40px;
	padding-left: 35px;
}

#overviewControls span {
	font-weight: bold;
}

#overviewControls ul {
	margin: 10px 10px 40px 10px;
}

#overviewControls li {
	margin: 7px;
	list-style: square;
}

#overviewControls li.active {
	color: #800000;
}

#overviewControls li.inactive {
	cursor: pointer;
}

#searchSubmit {
	display: none;
}

#searchField {
	width: 89px;
	height: 19px;
	font-size: 9px;
	font-family: Helvetica, Arial, sans-serif;
	font-weight: bold;
	color: #333;
	background: url(../images/editor-text-background.png) no-repeat transparent;
	border: none;
	padding: 0 3px;
}

p.no-track-warning {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 11px;
}

#overviewControls div {
	float: left;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 11px;
	font-weight: bold;
	margin: 8px 0 0 10px;
	color: #363535;
}

#overviewGrid {
	position: absolute;
	left: 342px;
	top: 190px;
	width: 850px;
	padding-left: 35px;
}

#overviewGrid, #overviewControls {
	color: #1e1e1e;
	text-transform: uppercase;
}

#overviewGrid ul {
	list-style-type: none;
}

#overviewGrid .trackname {
	font-size: 11px;
	font-weight: bolder;
	margin-bottom: 5px;
}

#overviewGrid .username, #overviewGrid .length {
	font-size: 9px;
	margin-bottom: 2px;
	font-weight: bold;
}

#overviewGrid img {
	margin-bottom: 5px;
}

#overviewGrid li {
	float: left;
	width: 140px;
	white-space: nowrap;
	margin-bottom: 15px;
	overflow: hidden;
}

#overviewGrid li li {
	clear: both;
	width: auto;
}

#overviewGrid a, #overviewControls a {
	cursor: pointer;
}

#helpBox {
	width: 250px; /* 280 */
	height: 380px; /* 420 */
	background-color: rgba(0, 0, 0, 0.75);
	top: 190px;
	position: absolute;
	left: 406px;
	font-size: 9px;
	padding: 20px 0px 20px 30px;
	line-height: 13px;
	z-index: 200;
}

#helpBox h2 {
	color: #fdfdfd;
	font-weight: bolder;
}

#helpBox p {
	color: #f6f254;
	margin-bottom: 10px;
}

#firstVisitContainer {
	background-color: rgba(0, 0, 0, 0.75);
	position: fixed;
	top: 0px;
	left: 0px;
	height: 100%;
	width: 100%;
	visibility: hidden;
	z-index: 199;
}

#firstVisitText {
	position: relative;
	top: 190px;
	left: 375px;
	padding-left: 75px;
	padding-top: 30px;
	visibility: hidden;
	z-index: 199;
}

#firstVisitCloseButton {
	cursor: pointer;
	left: 412px;
	top: 197px;
	position: absolute;
	z-index: 201;
	visibility: hidden;
}

#firstVisitText h2 {
	font-size: 15px;
	font-weight: bolder;
	margin-bottom: 30px;
	line-height: 20px;
}
/* ... */

